app/assets/stylesheets/frontend/views/_get-involved.scss
.get-involved {
  h2 {
    @include heading-36;
    border-bottom: $gutter-one-sixth solid $black;
    margin-bottom: $gutter-half;
    @include media(tablet) {
      margin-bottom: $gutter;
    }

    &#take-part {
      margin-bottom: 0;
      @include media(tablet) {
        margin-bottom: $gutter-half;
      }
    }

    &#elsewhere-on-the-web {
      margin-top: $gutter * 1.5;
    }
  }

  .featured-news article .content .text h3 {
    padding-bottom: 3px;
  }

  .content {
    padding: 0 $gutter-half;
  }

  .block {
    clear: both;
  }

  .floated-children {
    h2 {
      margin-left: $gutter-half;
      margin-right: $gutter-half;
    }

    .head-section {
      @include media(tablet) {
        float: left;
        width: $one-third;
      }

      h3 {
        @include heading-27;
        font-weight: bold;
        padding: 0 $gutter-half 7px;
      }
    }

    .count {

      @include govuk-media-query($from: desktop) {
        width: $half;
      }

      display: block;
      margin: $gutter-half;
      @include heading-80;
      font-weight: bold;
      text-decoration: none;

      .context {
        display: block;
        @include core-16;
        margin-top: 0;
        color: govuk-colour("black");
      }
    }

    section {
      @include core-19;
      @extend %contain-floats;
      clear: both;
      margin-bottom: $gutter;

      h3,
      h4 {
        font-weight: bold;
      }

      .column {
        @include media(tablet) {
          float: left;
          width: $two-thirds;
        }
      }

      .consultation-lists {
        @include media(tablet) {
          float: left;
          width: $two-thirds;
        }

        .consultation-closing-soon {
          color: govuk-colour("white");
          background-color: $inside-gov-brand;
          margin: $gutter $gutter-half;
          padding: $gutter-half $gutter-half 0;

          h3 {
            @include heading-27;
            font-weight: bold;
            padding: 0 0 $gutter-one-sixth;
            @include media(tablet) {
              padding: 0 0 $gutter-one-sixth;
            }
          }

          .document-list {
            margin-top: -$gutter-one-third;

            h3 {
              @include core-19;
              border-bottom: 1px solid govuk-colour("white");
              padding-bottom: $gutter-one-third;
              font-weight: normal;
            }

            .attributes {
              @extend %contain-floats;
              margin-top: $gutter-one-third;

              li {
                @include core-19;

                a {
                  color: govuk-colour("white");

                  &:link:focus {
                    color: $govuk-focus-text-colour;
                  }
                }
              }
            }
          }
          @include media(tablet) {
            margin: $gutter-half $gutter-half $gutter;
          }
        }

        .column {
          @include media(tablet) {
            float: left;
            width: $half;
            @include ie(7) {
              width: 49.99%;
            }
          }
        }

        .document-row {
          border: 0;
        }
      }

      .document-list {
        .document-row {
          border: 0;

          h3 {
            font-weight: normal;
          }

          .attributes {
            margin-top: $gutter-one-sixth;

            li {
              padding-right: $gutter-one-third;

              a {
                font-weight: bold;
              }
            }
          }
        }
      }

      &.start-a-petition,
      &.comment-follow {
        p {
          padding-top: $gutter-one-third;
        }
      }

      &.more-ways {
        .index-list {
          margin-top: $gutter-half;
        }

        h3 {
          padding-top: 0;
        }

        .column {
          margin-top: $gutter-one-sixth;
        }
      }

      &.take-part-pages,
      &.start-a-petition,
      &.more-ways {
        margin-bottom: 0;
        @include media(tablet) {
          margin-bottom: $gutter;
        }
      }

      &.respond-to-consultations {
        margin-bottom: 0;

        h3 {
          padding-top: 0;
        }

        .column {
          margin-top: $gutter-one-sixth;
        }
      }

      .see-all {
        font-weight: bold;
        margin: $gutter-one-third 0 $gutter;
      }
    }

    .article-clear {
      clear: both;
    }

    .consultations + .keyline {
      padding-top: 0;
    }

    .keyline {
      clear: both;
      border: solid $govuk-border-colour;
      border-width: 0 0 1px;
      margin: 0 $gutter-half $gutter;
      padding-top: $gutter;
    }
  }
}

